--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "clean": "del-cli ./build/*",
-    "build": "npm run clean && tsc"
+    "build": "npm run clean && tsc",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -13,5 +14,13 @@
   "devDependencies": {
     "del-cli": "^5.0.0",
     "typescript": "^4.9.3"
+  },
+  "dependencies": {
+    "@types/jest": "^29.2.3",
+    "@types/node": "^18.11.10",
+    "jest": "^29.3.1",
+    "ts-jest": "^29.0.3",
+    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0"
   }
 }
