--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.1.2",
   "description": "Guard clauses to easily validate arguments.",
   "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/phillippelevidad/guardjs"
+  },
   "scripts": {
     "clean": "del-cli ./build/*",
     "build": "npm run clean && tsc",
