--- a/package.json
+++ b/package.json
@@ -17,9 +17,7 @@
   "license": "ISC",
   "devDependencies": {
     "del-cli": "^5.0.0",
-    "typescript": "^4.9.3"
-  },
-  "dependencies": {
+    "typescript": "^4.9.3",
     "@types/jest": "^29.2.3",
     "@types/node": "^18.11.10",
     "jest": "^29.3.1",
